--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -1,14 +1,13 @@
-server:
-  port: 8081
-
 spring:
-  datasource:
-    url: jdbc:h2:mem:authdb
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+  application:
+    name: auth-service # Config Server에서 설정을 가져올 때 사용할 이름
+  cloud:
+    config:
+      uri: http://localhost:8888 # Config Server 주소
+      profile: default         # 기본 프로파일
+      fail-fast: true           # Config Server 연결 실패 시 실행 중단
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/ # Discovery Server 주소
