--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,19 +1,13 @@
-server:
-  port: 8082
-
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/userdb
-    username: root
-    password: 1234
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    initialization-mode: always
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+  application:
+    name: user-service
+  cloud:
+    config:
+      uri: http://localhost:8888 # Config Server 주소
+      profile: default           # 사용할 프로파일
+      fail-fast: true           # Config Server 연결 실패 시 실행 중단
+
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-
