--- a/API-Gateway/src/main/resources/application.yml
+++ b/API-Gateway/src/main/resources/application.yml
@@ -4,26 +4,27 @@ spring:
   application:
     name: api-gateway
   cloud:
-  gateway:
-    routes:
-      - id: auth-service
-        uri: lb://auth-service
-        predicates:
-          - Path=/auth/**
-        filters:
-          - RewritePath=/auth/(?<segment>.*), /$\{segment}
-      - id: member-service
-        uri: lb://member-service
-        predicates:
-          - Path=/members/**
-        filters:
-          - RewritePath=/members/(?<segment>.*), /$\{segment}
-    globalcors:
-      corsConfigurations:
-        '[/**]':
-          allowedOrigins: "*"
-          allowedMethods: "*"
-          allowedHeaders: "*"
+    gateway:
+      routes:
+        - id: auth-service
+          uri: lb://AUTH-SERVICE
+          predicates:
+            - Path=/auth/**
+          filters:
+            - name: CircuitBreaker
+              args:
+                name: authService
+                fallbackUri: forward:/fallback/auth
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      authService:
+        slidingWindowSize: 10
+        failureRateThreshold: 50
+        waitDurationInOpenState: 5000
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
 
 eureka:
   client:
